--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
     <!-- Main Content -->
     <section class="version-banner">
         <a href="version1.html" class="banner">
-            <img src="version1.jpg" alt="Version 1">
+            <img src="webp/v1m.jpg" alt="Version 1">
             <h2>Version 1</h2>
         </a>
         <a href="version2.html" class="banner">
-            <img src="version2.jpg" alt="Version 2">
+            <img src="webp/v2m.jpg" alt="Version 2">
             <h2>Version 2</h2>
         </a>
         <a href="version3.html" class="banner">
-            <img src="version3.jpg" alt="Version 3">
+            <img src="webp/v3f.jpg" alt="Version 3">
             <h2>Version 3</h2>
         </a>
     </section>
