--- a/versions.html
+++ b/versions.html
@@ -81,13 +81,13 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: #fff;
-            font-size: 20px;
+            color: #000000;
+            font-size: 24px;
             margin: 0;
             padding: 10px;
             border-radius: 5px;
             transition: all 0.3s ease;
-            font-weight: 400;
+            font-weight: 600;
 
         }
 
@@ -131,19 +131,19 @@
     <section class="version-container">
         <a href="version1.html" class="version-link">
             <div class="version-box">
-                <img src="version1.jpg" alt="Version 1">
+                <img src="webp/v1m.jpg" alt="Version 1">
                 <h2>Version 1</h2>
             </div>
         </a>
         <a href="version2.html" class="version-link">
             <div class="version-box">
-                <img src="version2.jpg" alt="Version 2">
+                <img src="webp/v2m.jpg" alt="Version 2">
                 <h2>Version 2</h2>
             </div>
         </a>
         <a href="version3.html" class="version-link">
             <div class="version-box">
-                <img src="version3.jpg" alt="Version 3">
+                <img src="webp/v3fm.jpg" alt="Version 3">
                 <h2>Version 3</h2>
             </div>
         </a>
