--- a/version2.html
+++ b/version2.html
@@ -6,33 +6,36 @@
     <title>Version 2 - HydrogenResearch</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
     <style>
-        body {
+         *{
             margin: 0;
             padding: 0;
-            background-color: #000; /* Matching the black background */
-            color: #fff; /* White text for contrast */
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: #000;
+            color: #fff;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            min-height: 100vh; /* Full height to ensure footer positioning */
+            min-height: 100vh;
             display: flex;
-            flex-direction: column; /* Flex layout for consistent structure */
-            justify-content: space-between; /* Ensures footer stays at the bottom */
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .nav-bar {
             display: flex;
-            justify-content: space-between; /* Aligns logo and nav items evenly */
-            align-items: center; /* Center logo vertically */
+            justify-content: space-between;
+            align-items: center;
             padding: 20px;
-            background-color: #000; /* Black background for consistency */
-            box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1); /* Light shadow */
+            background-color: #000;
+            box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1);
         }
 
         .brand {
-            font-size: 34px; /* Same font size as on the contact page */
+            font-size: 34px; /* No change */
             color: #fff;
             text-decoration: none;
             font-weight: 600;
-            margin-left: 20px; /* Add left margin for spacing */
         }
 
         .nav-links {
@@ -43,42 +46,39 @@
         .nav-links a {
             color: #fff;
             text-decoration: none;
-            font-size: 20px; /* Same font size as on the contact page */
+            font-size: 20px; /* No change */
         }
 
         .nav-links a:hover {
-            color: #aaa; /* Light gray on hover */
+            color: #aaa;
         }
 
         .version-links {
-            margin: 10px 0;
             display: flex;
             gap: 10px;
             padding: 10px;
-            justify-content: flex-start; /* Align to the left */
-            margin-left: 40px; /* Align with the logo */
+            justify-content: flex-start;
+            padding-left: 20px;
         }
 
         .version-links a {
             color: #fff;
             text-decoration: none;
-            font-size: 18px; /* Same font size as on the contact page */
+            font-size: 18px; /* No change */
             padding: 10px;
             border-radius: 5px;
-            transition: color 0.3s ease; /* Smooth color transition */
+            transition: color 0.3s ease;
         }
 
         .version-links a:hover {
-            color: #aaa; /* Light gray on hover */
+            color: #aaa;
         }
 
         .main-name {
             text-align: center;
-            margin-top: 10px ; /* Adjusted margin to match the contact page */
-            margin-bottom: 20px;
-            font-size: 36px; /* Same font size as on the contact page */
+            margin: 20px 0;
+            font-size: 36px; /* No change */
             font-weight: 600;
-            color: #fff;
         }
 
         .content {
@@ -86,43 +86,44 @@
             justify-content: center;
             align-items: flex-start;
             gap: 20px;
-            margin: 0 20px;
-            flex-grow: 1; /* Content area grows to push footer to bottom */
-            padding-bottom: 50px; /* Additional padding to prevent footer overlap */
+            padding: 20px;
+            flex-wrap: wrap; /* Allows wrapping on smaller screens */
         }
 
         .content img {
-            width: 300px; /* Adjust size as needed */
+            width: 100%;
+            max-width: 300px; /* Restrict to a maximum width */
             height: auto;
             border-radius: 10px;
         }
 
         .details {
-            max-width: 500px; /* Limit the width for better readability */
+            max-width: 500px;
             color: #fff;
         }
 
         .details p {
-            font-size: 16px; /* Same font size as on the contact page */
+            font-size: 16px; /* No change */
             margin: 5px 0;
         }
 
         .description-bar {
             margin: 30px auto;
             padding: 20px;
-            max-width: 800px; /* Set a max-width for the description bar */
-            background-color: #333; /* Dark background for the description bar */
+            width: 90%; /* Use percentage for flexibility */
+            background-color: #333;
             border-radius: 10px;
-            box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1); /* Light shadow */
+            box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1);
         }
 
         .description-bar p {
-            font-size: 16px; /* Same font size as on the contact page */
+            font-size: 16px; /* No change */
             margin: 0;
             line-height: 1.6;
             color: #e0e0e0;
         }
 
+       
         footer {
             padding: 20px;
             background-color: #111;
@@ -135,6 +136,7 @@
         footer p {
             margin: 0;
         }
+        
     </style>
 </head>
 <body>
@@ -150,23 +152,23 @@
     </nav>
 
     <!-- Version Links Below Logo -->
-    <section class="version-links">
+    <section class="version-links" style="margin-left: 17px;">
         <a style="font-size: 18px;" href="version1.html">Version 1</a>
         <a style="font-size: 18px;" href="version3.html">Version 3</a>
     </section>
 
     <!-- Main Page Name -->
     <section class="main-name">
-        Version 2
+        Dual-Cell Electrolyser
     </section>
 
     <!-- Content -->
     <section class="content">
-        <img src="version2.jpg" alt="Version 2">
+        <img src="webp/v2m.jpg" alt="Version 2">
         <div class="details">
             <p><strong>Input Power:</strong> 12V</p>
             <p><strong>Current Draw:</strong> 2A</p>
-            <p><strong>Volume of Electrolyte:</strong> 63.33 mL</p>
+            <p><strong>Volume of Electrolyte:</strong> 62.33 mL</p>
             <p><strong>No of Cylinders:</strong> 3</p>
             <p><strong>Active Surface Area:</strong> 224.92cm² </p>
             <p><strong>Gas Generation:</strong> 100mL/min </p>
@@ -176,8 +178,9 @@
 
     <!-- Description Bar -->
     <section class="description-bar">
-        <p>This is a detailed description of the Version 2 HHO generator. It highlights the features, advantages, and technological aspects of the system. This section provides an in-depth look into what makes Version 2 unique and why it stands out among other models. It covers the innovation behind the design, the efficiency of the gas generation, and the improvements made compared to previous versions. Additionally, this description helps users understand the practical applications and benefits of using Version 2 in various scenarios.</p>
-    </section>
+        <p>This is the second generation of our tubular-structured HHO generators. This model features three concentric tubes arranged with opposing polarities to enhance hydrogen production. Although the increase in production volume was relatively small, this design helped us understand key concepts related to hydrogen generation, including the impact of electrode spacing, polarity arrangements, and electrolyte composition.
+
+            Through testing, we discovered that concentric tube structures allow for a more uniform electric field, improving the efficiency of the electrolysis process. Additionally, the design offered insights into optimizing gas separation and minimizing power loss. These learnings laid the foundation for further advancements in our next-generation models, driving us closer to more efficient and practical hydrogen generation solutions. </section>
 
     <!-- Footer -->
     <footer>
